--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,5 +1,23 @@
+
 .App {
+  height: 100vh;
+  width: 100vw;
+  color: white;
   text-align: center;
+  /* background-color: rgb(11, 37, 89); */
+  background-color: rgb(68, 88, 70);
+  animation: fadeIn ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn {
+  0% { 
+      opacity: 0;
+  }
+  100% { 
+      opacity: 1;
+  }
 }
 
 .App-header {
@@ -13,7 +31,79 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.page-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation: fadeIn ease 1.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  background-color: rgb(68, 88, 70);
 }
 
+.page-container > * {
+  width: 75%;
+}
+
+.page-content {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  border: solid yellow;
+}
+
+.page-content > * {
+  height: 75%;
+  width: 45%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 1%;
+}
+
+.page-content > * > * {
+  width: 100%;
+}
+
+.page-subtitle {
+  font-size: 25px;
+}
+
+.page-image {
+  height: 500px;
+  width: 500px;
+  background-color: white;
+  box-shadow: 0 0 20px rgb(48, 48, 48);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.page-text > * {
+  text-align: left;
+}
+
+ul {
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  display: flex;
+}
+
+li {
+  padding: 1%;
+}
