added content and styling to credits, work, and equipement pages

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,11 +5,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color:rgba(255, 255, 255);
-    color: rgb(68, 88, 70);
+    background-color: var(--secondary);
+    color: var(--primary);
     font-size: small;
     z-index: 0;
-    border-top: 10px solid rgb(68, 88, 70);
+    border-top: 10px solid var(--primary);
 }
 
 .footer-container > div {
@@ -18,7 +18,7 @@
 
 .footer-container > a {
     padding: 0;
-    color: rgb(68, 88, 70);
+    color: var(--primary);
 }
 
 #designer-link {
