--- a/src/pages/Credits/Credits.css
+++ b/src/pages/Credits/Credits.css
@@ -1,9 +1,37 @@
-.credit-info {
-    border: solid pink;
-    width: 100%;
+#credits-page-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
 }
 
-#imdb-container {
-    border: solid greenyellow;
+#credits-page-text {
+    height: 100%;
+    width: 75%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    justify-items: center;
 }
 
+#credits-page-text > * {
+    height: 80%;
+    width: 80%;
+    background-color: var(--secondary);
+    color: var(--primary);
+    border-radius: 5px;
+    box-shadow: var(--box-shadow);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 2%; 
+}
+
+.project-name {
+    font-weight: bolder;
+    text-decoration: underline;
+}
