--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -5,9 +5,9 @@
     align-items: center;
     height: 7%;
     width: 100%;
-    background-color: white;
+    background-color: var(--secondary);
     margin-top: 2%;
-    border-bottom: 10px solid rgb(68, 88, 70);
+    border-bottom: 10px solid var(--primary);
     z-index: 0;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .active-nav-links {
-    background-color: rgb(68, 88, 70);
+    background-color: var(--primary);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +32,7 @@
 }
 
 .active-nav-links > a {
-    color: white;
+    color: var(--secondary);
     font-size: larger;
 }
 
@@ -41,7 +41,7 @@ a > img {
 }
 
 a {
-    color: rgb(68, 88, 70);
+    color: var(--primary);
     padding: 0;
     text-decoration: none;
 }
