--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -6,22 +6,24 @@
     height: 0;
 }
 
+
 .inactive {
-    background-color: white;
-    color: rgb(68, 88, 70);
+    background-color: var(--secondary);
+    color: var(--primary);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 50px;
     height: 0;
-    border: 2px solid gray;
+    border: 2px solid var(--drop-shadow);
+    width: 40%;
 }
 
 .inactive:hover {
-    background-color: rgb(68, 88, 70);
-    border: 2px solid white;
-    color: white;
+    background-color: var(--primary);
+    border: 2px solid var(--secondary);
+    color: var(--secondary);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,7 +36,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: var(--secondary);
     font-size: small;
     text-decoration: none;
     
@@ -49,7 +51,11 @@ img.icon {
   }
 
 img.icon:hover {
-    background-color: white;
+    background-color: var(--secondary);
     border-radius: 50%;
+}
+
+.contact-links-container {
+    align-items: flex-start;
 }
   
