--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,6 @@
 #home-page-container {
     background-color: var(--secondary);
-    color: var(--primary);
+    color: var(--logo-text-color);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -15,3 +15,14 @@
     justify-content: center;
     align-items: center;
 }
+
+/* .typing-effect {
+    overflow: hidden;
+    animation: typing 5s steps(100, end);
+  }
+  
+
+  @keyframes typing {
+    from { width: 0; }
+    to { width: 100%; }
+  } */
