--- a/src/pages/Work/Work.css
+++ b/src/pages/Work/Work.css
@@ -1,18 +1,16 @@
 #work-page-content {
-    padding-top: 20%;
     height: 100%;
+    padding-top: 10%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     justify-items: center;
-    align-items: center;
-    border: solid pink;
+    align-items: flex-start;
 }
 
 .work-example-container {
     height: auto;
     width: auto;
-    border: solid red;
 }
 
 iframe {
