--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 7%;
+    height: 10vh;
     width: 100%;
     background-color: var(--secondary);
     margin-top: 2%;
