--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -11,8 +11,8 @@
 
 
 .App {
-  height: 100vh;
   width: 100vw;
+  height: 100%;
   color: var(--body-text);
   text-align: center;
   background-color: var(--primary);
@@ -42,7 +42,7 @@
 }
 
 .page-container {
-  height: 100%;
+  height: 88vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -52,10 +52,6 @@
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   background-color: var(--primary);
-}
-
-.page-container > * {
-  width: 75%;
 }
 
 .page-content {
@@ -93,6 +89,23 @@
   align-items: center;
 }
 
+.image-wrapper {
+  margin: 50px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.image {
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+
 .page-text {
   display: flex;
   flex-direction: column;
@@ -113,9 +126,9 @@ li {
   padding: 1%;
 }
 
-.links-container{
+.links-container {
   height: 20%;
-  padding-top: 2%;
+  padding: 2% 0 1% 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -126,7 +139,7 @@ li {
   color: var(--secondary);
   border: 1px solid var(--secondary);
   border-radius: 5px;
-  padding: 5px;
+  padding: 20px;
   height: 28px;
   display: flex;
   flex-direction: row;
