--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -4,12 +4,12 @@
     align-items: center;
 }
 
-#about-page-content > * > div, #about-page-content > * > a {
-    width: 75%;
+#about-page-content > div:last-child {
+    width: 40%;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: flex-start;
-    padding: 2%;
+    padding: 4%;
 }
 
