--- a/src/pages/Work/Work.css
+++ b/src/pages/Work/Work.css
@@ -1,39 +1,52 @@
-#work-page-container {
-    all: revert;
-    height: 100%;
-}
-
 #work-page-content {
-    all: revert;
-    height: 100%;
-    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     position: relative;
 }
 
-#imdb-page-link {
-    height: 28px;
-    padding: 10px;
-}
-
 .youtube {
-    height: 360px;
-    margin: 1%;
+    height: 500px;
+    z-index: 1;
 }
 
 .vimeo {
-    height: 360px;
-    margin: 1%;
+    height: 500px;
+    z-index: 1;
 }
 
 iframe {
     box-shadow: var(--box-shadow);
-    background-color: rgba(255, 255, 255, 1);
+    background: var(--secondary);
     border-radius: 5px;
+    z-index: 1;
 }
 
+.about-video {
+    flex-direction: column;
+    justify-content: space-evenly;
+    box-shadow: var(--box-shadow);
+    border: 1px solid var(--secondary);
+    color: var(--secondary);
+    border-radius: 5px;
+    height: 500px;
+    z-index: 1;
+}
+
+#work-page-arrows-container {
+    position: absolute;
+    width: 60%;
+    height: 500px;
+    justify-content: space-between;
+}
+
+.work-page-arrow {
+    height: 50px;
+    background: var(--secondary);
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: var(--box-shadow);
+}
 
 
