--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -5,7 +5,7 @@
   --accent: rgb(11, 37, 89);
   --body-text: #ffffff;
   --accent-text: rgb(68, 88, 70);
-  --logo-text-color: rgb(54, 75, 70);
+  --logo-text-color: rgb(54, 75, 70, .8);
   --box-shadow: 0 0 20px rgb(48, 48, 48);
 }
 
@@ -71,10 +71,15 @@
   justify-content: center;
   align-items: center;
   padding: 1%;
+
+  @media only screen and (max-width: 750px) {
+    flex-direction: column;
+  }
 }
 
 .page-subtitle {
   font-size: 25px;
+  
 }
 
 .page-image {
@@ -87,6 +92,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @media only screen and (max-width: 750px) {
+    width: 90%;
+    margin: 0px 0 10px 0;
+  }
 }
 
 .image-wrapper {
@@ -95,6 +105,11 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+
+  @media only screen and (max-width: 750px) {
+    height: 100%;
+    margin: 0;
+  }
 }
 
 .image {
@@ -104,6 +119,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
+
+  @media only screen and (max-width: 750px) {
+    height: 100%;
+    width: auto;
+  }
 }
 
 .page-text {
@@ -133,6 +153,10 @@ li {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  
+  @media only screen and (max-width: 750px) {
+    width: 100%;
+  }
 }
 
 .page-link {
@@ -143,8 +167,14 @@ li {
   height: 28px;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
   box-shadow: var(--box-shadow);
+
+  @media only screen and (max-width: 750px) {
+    justify-content: center;
+    width: 90%;
+  }
 }
 
 .page-link:hover {
@@ -152,6 +182,11 @@ li {
   background-color: var(--secondary);
   color: var(--primary);
   border: 1px solid var(--secondary);
+  transform: translateY(-1px);
+}
+
+.page-link:active {
+  transform: translateY(1px);
 }
 
 .arrows-container {
@@ -164,6 +199,13 @@ li {
 
 .arrow {
   height: 20px;
+
+  @media only screen and (max-width: 750px) {
+    width: 0px;
+    height: 0px;
+    border: none;
+    background: none;
+  }
 }
 
 .left-arrow {
