--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,25 +1,59 @@
-.page-subtitle {
-    font-size: 25px;
+#contact-page-content {
+    @media only screen and (max-width: 750px) {
+        position: relative;
+    }
+}
+
+#contact-page-subtitle {
+
+    @media only screen and (max-width: 750px) {
+        position: absolute;
+        top: 8%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 60px;
+        width: 90%;
+    }
 }
 
 .active {
     height: 0;
     margin-bottom: 40px;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    @media only screen and (max-width: 750px) {
+        height: 100px;
+        position: absolute;
+        top: 22%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
 
 .inactive {
     background-color: var(--secondary);
     color: var(--primary);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 50px;
     height: 0;
     border: 2px solid var(--secondary);
     box-shadow: var(--box-shadow);
     width: 40%;
-    margin-bottom: 40px;
+
+    @media only screen and (max-width: 750px) {
+        height: 40px;
+        width: 350px;
+        position: absolute;
+        top: 22%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
 
 .inactive:hover {
@@ -57,7 +91,32 @@ img.icon:hover {
     border-radius: 50%;
 }
 
-.contact-links-container {
-    align-items: flex-start;
+#contact-page-text {
+    @media only screen and (max-width: 750px) {
+        position: absolute;
+        top: 57%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        height: auto;
+    }
+
 }
+
+.contact-links-container {
+    align-items: center;
+
+    @media only screen and (max-width: 750px) {
+        position: absolute;
+        top: 90%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 60%;
+        height: 60px;
+    }
+}
+
+
   
