--- a/src/pages/Equipment/Equipment.css
+++ b/src/pages/Equipment/Equipment.css
@@ -1,7 +1,18 @@
+#equipment-page-container {
+    @media only screen and (max-width: 750px) {
+        height: 1200px;
+    }
+}
+
 #equipment-page-content {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: flex-start;
+
+    @media only screen and (max-width: 750px) {
+        position: relative;
+        width: 90%;
+    }
 }
 
 .package-container {
@@ -15,6 +26,35 @@
     height: 500px;
     border-radius: 5px;
     box-shadow: var(--box-shadow);
+
+    @media only screen and (max-width: 750px) {
+        position: absolute;
+        top: 24.5%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 350px;
+    }
+}
+
+#equipment-links-container {
+    @media only screen and (max-width: 750px) {
+        position: absolute;
+        top: 82%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 10;
+    }
+}
+
+#equipment-page-image {
+    @media only screen and (max-width: 750px) {
+        position: absolute;
+        top: 74%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 350px;
+        
+    }
 }
 
 .package-container > * {
