--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -9,16 +9,24 @@
     margin-top: 2%;
     border-bottom: 10px solid var(--primary);
     z-index: 0;
+
+    @media only screen and (max-width: 750px) {
+        height: 100px;
+    }
 }
 
 .nav-links {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 100%;
     width: 100%;
     border-radius: 25px 25px 0 0;
     font-size: small;
+
+    @media only screen and (max-width: 750px) {
+        
+    }
 }
 
 .active-nav-links {
@@ -29,15 +37,35 @@
     height: 100%;
     width: 100%;
     border-radius: 25px 25px 0 0;
+
+    @media only screen and (max-width: 750px) {
+        background-color: var(--secondary);
+    }
 }
 
 .active-nav-links > a {
     color: var(--secondary);
     font-size: larger;
+
+    @media only screen and (max-width: 750px) {
+        color: var(--primary);
+        text-decoration: underline;
+        font-size: small;
+    }
 }
 
 a > img {
     height: 300px;
+}
+
+#navLogo > a > img {
+
+    @media only screen and (max-width: 750px) {
+        position: absolute;
+        height: 100px;
+        top: 6px;
+        left: -10px;
+    }
 }
 
 a {
