--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,8 +3,15 @@
     color: var(--logo-text-color);
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: 750px) {
+      height: min(800px, 95vh);
+      justify-content: flex-start;
+      width: 100%;
+      
+  }
 }
 
 #home-page-image-container {
@@ -14,6 +21,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: 750px) {
+      height: 60%;
+    }
+    
+}
+
+#home-logo {
+  @media only screen and (max-width: 750px) {
+    height: 300px;
+  }
+}
+
+#home-page-subtitle {
+  width: 70%;
 }
 
 /* .typing-effect {
