--- a/src/pages/Equipment/Equipment.css
+++ b/src/pages/Equipment/Equipment.css
@@ -1,6 +1,9 @@
 #equipment-page-container {
-    @media only screen and (max-width: 750px) {
-        height: 1200px;
+    @media only screen and (max-width: 1200px) {
+        height: 1300px;
+        justify-content: flex-start;
+        align-items: center;
+        
     }
 }
 
@@ -9,9 +12,18 @@
     justify-content: space-evenly;
     align-items: flex-start;
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: 1200px) {
         position: relative;
         width: 90%;
+    }
+}
+
+#equipment-links-container {
+    @media only screen and (max-width: 1200px) {
+        z-index: 10;
+        width: 388px;
+        margin: 0;
+        padding: 0;
     }
 }
 
@@ -27,33 +39,22 @@
     border-radius: 5px;
     box-shadow: var(--box-shadow);
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: 1200px) {
         position: absolute;
-        top: 24.5%;
+        top: 20%;
         left: 50%;
         transform: translate(-50%, -50%);
         width: 350px;
-    }
-}
-
-#equipment-links-container {
-    @media only screen and (max-width: 750px) {
-        position: absolute;
-        top: 82%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 10;
     }
 }
 
 #equipment-page-image {
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: 1200px) {
         position: absolute;
-        top: 74%;
+        top: 72%;
         left: 50%;
         transform: translate(-50%, -50%);
         width: 350px;
-        
     }
 }
 
